@@ -1,0 +1,39 @@
+<?php
+require_once 'PHPUnit/Framework.php';
+
+//require_once 'config.php';
+
+/**
+ * Test class for JFrameworkConfig.
+ * Generated by PHPUnit on 2009-10-08 at 21:34:53.
+ */
+class JFrameworkConfigTest extends PHPUnit_Framework_TestCase
+{
+    /**
+     * @var    JFrameworkConfig
+     * @access protected
+     */
+    protected $object;
+
+    /**
+     * Sets up the fixture, for example, opens a network connection.
+     * This method is called before a test is executed.
+     *
+     * @access protected
+     */
+    protected function setUp()
+    {
+        //$this->object = new JFrameworkConfig;
+    }
+
+    /**
+     * Tears down the fixture, for example, closes a network connection.
+     * This method is called after a test is executed.
+     *
+     * @access protected
+     */
+    protected function tearDown()
+    {
+    }
+}
+
