@@ -1,0 +1,50 @@
+<?php
+require_once 'PHPUnit/Framework.php';
+
+//require_once 'methods.php';
+
+/**
+ * Test class for JRoute.
+ * Generated by PHPUnit on 2009-10-08 at 21:36:15.
+ */
+class JRouteTest extends PHPUnit_Framework_TestCase
+{
+    /**
+     * @var    JRoute
+     * @access protected
+     */
+    protected $object;
+
+    /**
+     * Sets up the fixture, for example, opens a network connection.
+     * This method is called before a test is executed.
+     *
+     * @access protected
+     */
+    protected function setUp()
+    {
+        //$this->object = new JRoute;
+    }
+
+    /**
+     * Tears down the fixture, for example, closes a network connection.
+     * This method is called after a test is executed.
+     *
+     * @access protected
+     */
+    protected function tearDown()
+    {
+    }
+
+    /**
+     * @todo Implement test_().
+     */
+    public function test_()
+    {
+        // Remove the following lines when you implement this test.
+        $this->markTestIncomplete(
+          'This test has not been implemented yet.'
+        );
+    }
+}
+?>
