@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+09-Oct-2009 Ian MacLennan
++ Added test skeletons for JFactory, JFrameworkConfig, JRoute, JText and JVersion
+
 08-Oct-2009 Andrew Eddie
 ^ Added checks for new UTC date filters in testFilter test.
 ^ Changed JControllerForm tests to Hamcrest style.
